[gd_scene load_steps=5 format=2]

[ext_resource path="res://Dialog/DialogBox.png" type="Texture" id=1]
[ext_resource path="res://Dialog/DialogSystem.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "bounce"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Continue/Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 0.75 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("DialogBox/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "bounce_anim"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "speedUpText"
} ]
}

[node name="DialogSystem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -99.405
margin_right = 199.995
margin_bottom = 100.595
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DialogBox"]
margin_left = 25.0
margin_top = 32.0
margin_right = 376.0
margin_bottom = 173.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameBox" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.351
margin_top = -121.784
margin_right = -118.351
margin_bottom = -78.7838
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NameBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -21.5
margin_right = 52.0
margin_bottom = 21.5
text = "Joan"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 67.0
margin_top = 82.0
margin_right = 179.0
margin_bottom = 116.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -15.3108
margin_right = 56.0
margin_bottom = 14.6892
rect_pivot_offset = Vector2( 56, 15 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 1 )
anims/show_text = SubResource( 2 )

[node name="Buttons" type="Control" parent="."]
visible = false
margin_left = 325.0
margin_top = 348.0
margin_right = 365.0
margin_bottom = 388.0

[node name="Yes" type="Button" parent="Buttons"]
margin_right = 60.0
margin_bottom = 40.0
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="Buttons"]
margin_left = 67.0
margin_right = 127.0
margin_bottom = 40.0
text = "No"
[connection signal="pressed" from="Buttons/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Buttons/No" to="." method="_on_No_pressed"]
